@@ -744,6 +744,7 @@ class GlobalOptions
 	bool parseSource;
 	bool doSemantics;
 	bool pasteIndent;
+	bool projectSemantics;
 	
 	bool ColorizeVersions = true;
 	bool lastColorizeVersions;
@@ -817,6 +818,7 @@ class GlobalOptions
 			demangleError    = keyToolOpts.GetDWORD("demangleError", 1) != 0;
 			autoOutlining    = keyToolOpts.GetDWORD("autoOutlining", 1) != 0;
 			parseSource      = keyToolOpts.GetDWORD("parseSource", 1) != 0;
+			projectSemantics = keyToolOpts.GetDWORD("projectSemantics", 1) != 0;
 			doSemantics      = keyToolOpts.GetDWORD("doSemantics", 1) != 0;
 			pasteIndent      = keyToolOpts.GetDWORD("pasteIndent", 1) != 0;
 
@@ -836,6 +838,7 @@ class GlobalOptions
 			demangleError        = keyUserOpts.GetDWORD("demangleError",    demangleError) != 0;
 			autoOutlining        = keyUserOpts.GetDWORD("autoOutlining",    autoOutlining) != 0;
 			parseSource          = keyUserOpts.GetDWORD("parseSource",      parseSource) != 0;
+			projectSemantics     = keyUserOpts.GetDWORD("projectSemantics", projectSemantics) != 0;
 			doSemantics          = keyUserOpts.GetDWORD("doSemantics",      doSemantics) != 0;
 			pasteIndent          = keyUserOpts.GetDWORD("pasteIndent",      pasteIndent) != 0;
 			lastColorizeVersions = ColorizeVersions;
@@ -895,6 +898,7 @@ class GlobalOptions
 			keyToolOpts.Set("demangleError", demangleError);
 			keyToolOpts.Set("autoOutlining", autoOutlining);
 			keyToolOpts.Set("parseSource", parseSource);
+			keyToolOpts.Set("projectSemantics", projectSemantics);
 			keyToolOpts.Set("doSemantics", doSemantics);
 			keyToolOpts.Set("pasteIndent", pasteIndent);
 
